# docs/swagger.yaml
@@ -141,7 +141,41 @@ paths:
           description: Invalid user ID
         "500":
           description: Could not delete user
-
+  /users/login:
+    post:
+      summary: User login
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                  format: password
+      responses:
+        "200":
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        "401":
+          description: Invalid credentials
+        "500":
+          description: Server error
 
 components:
   schemas:
