# internal/routes/user-router.go
@@ -10,11 +10,13 @@ import (
 
 func RegisterUserRoutes(rg *gin.RouterGroup) {
 	UserRepository := repositories.NewUserRepository(database.DB)
-	UserHandler := handlers.NewUserHandler(UserRepository)
+	TokenRepository := repositories.NewTokenRepository(database.DB)
+	UserHandler := handlers.NewUserHandler(UserRepository, TokenRepository)
 	users := rg.Group("/users")
 	users.POST("/", UserHandler.Register)
 	users.GET("/", UserHandler.ListUsers)
 	users.GET("/:id", UserHandler.GetUserById)
 	users.PUT("/:id", UserHandler.UpdateUser)
 	users.DELETE("/:id", UserHandler.DeleteUser)
+	users.POST("/login", UserHandler.Login)
 }
